trying to fix blurred sidebar...

--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,13 @@ body {
 }
 
 header {
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
 }
 
 main, header {
     max-width: 100%;
     width: 100%;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
 }
 
 .scroll-down header {
@@ -88,7 +88,7 @@ nav li:first-child {
     z-index: 999;
     background-color: rgba(255, 255, 255, 0.34);
     backdrop-filter: blur(20px) !important;
-    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1); */
     display: none;
     flex-direction: column;
     align-items: center;
